--- a/Basilisk/Base.lproj/Main.storyboard
+++ b/Basilisk/Base.lproj/Main.storyboard
@@ -901,14 +901,17 @@
                                     <rect key="frame" x="0.0" y="0.0" width="450" height="22"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
+                                        <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="qBh-wM-QTD">
+                                            <rect key="frame" x="0.0" y="19" width="450" height="5"/>
+                                        </box>
                                         <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="2" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wj9-Ig-jWf">
-                                            <rect key="frame" x="5" y="0.0" width="440" height="22"/>
+                                            <rect key="frame" x="7" y="0.0" width="438" height="22"/>
                                             <subviews>
                                                 <customView horizontalCompressionResistancePriority="748" translatesAutoresizingMaskIntoConstraints="NO" id="ic4-el-Soj" customClass="ConnectionStatusView" customModule="Basilisk" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
                                                 </customView>
                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oTL-04-r6T">
-                                                    <rect key="frame" x="22" y="4" width="420" height="14"/>
+                                                    <rect key="frame" x="22" y="4" width="418" height="14"/>
                                                     <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="xNJ-wY-wbj">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -930,9 +933,14 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="qBh-wM-QTD" firstAttribute="width" secondItem="VGE-TN-NtX" secondAttribute="width" id="2XI-oI-Lmz"/>
                                         <constraint firstAttribute="trailing" secondItem="wj9-Ig-jWf" secondAttribute="trailing" constant="5" id="4Lr-bq-Icq"/>
                                         <constraint firstAttribute="bottom" secondItem="wj9-Ig-jWf" secondAttribute="bottom" id="OG8-2H-fsI"/>
-                                        <constraint firstItem="wj9-Ig-jWf" firstAttribute="leading" secondItem="VGE-TN-NtX" secondAttribute="leading" constant="5" id="SBy-9b-paI"/>
+                                        <constraint firstItem="qBh-wM-QTD" firstAttribute="top" secondItem="VGE-TN-NtX" secondAttribute="top" id="PuU-eg-3ul"/>
+                                        <constraint firstItem="wj9-Ig-jWf" firstAttribute="leading" secondItem="VGE-TN-NtX" secondAttribute="leading" constant="7" id="SBy-9b-paI"/>
+                                        <constraint firstItem="qBh-wM-QTD" firstAttribute="leading" secondItem="VGE-TN-NtX" secondAttribute="leading" id="WKq-nU-TVG"/>
+                                        <constraint firstItem="wj9-Ig-jWf" firstAttribute="centerY" secondItem="VGE-TN-NtX" secondAttribute="centerY" id="Wda-UL-uvR"/>
+                                        <constraint firstAttribute="trailing" secondItem="qBh-wM-QTD" secondAttribute="trailing" id="irc-oL-DNb"/>
                                         <constraint firstItem="wj9-Ig-jWf" firstAttribute="top" secondItem="VGE-TN-NtX" secondAttribute="top" id="kz6-Dk-AtC"/>
                                     </constraints>
                                 </view>
