measure accessory heights more accurately
This commit includes a myriad of changes that fixes scrolling in the
messages view when message accessories are being displayed (for now, the
only accessories supported are image attachments). Janky scrolling was
caused by incorrect height measurements; for some reason, the incorrect
fitting size is returned for unified message rows when the content stack
view contains accessories. The size fails to encompass the fitting sizes
of the inner stack view, even though it is a direct subview. (The
content label was also being measured incorrectly--see below.)

For now, give a rough estimate of the proper height of the message row
when it contains accessories that necessitate a crude height
calculation. In the future, we should figure out why the fitting size of
the row is too small, so we can have a single code path that doesn't
rely on hardcoded constants.

Accessories shrinking themselves when the window is resized and not
growing was also fixed by removing the width and height constraints,
which were fixed to the clamped attachment dimensions. This is something
that is best handled by the intrinsic content size constraints, which
are steadfast and let the views size themselves back up when the window
gets bigger again.

And finally, because our message sizing template is a view floating in
space and is never actually rendered, we need to set a preferred max
layout width for the content label. Here we're also using hardcoded
constants, but this calculates a proper width in the event of wrapping.

With all of these improvements, there's much less jank when it comes to
scrolling now.

Other changes:

- Only bother setting up accessories for image attachments. We don't
  support video attachments at the moment.
- Invalidate our message height cache when the table view changes width.
  We then rely on the internal height cache of the table view, which
  should be OK for now. Not sure how else to do this.
- Add a lot of debugging fun

--- a/Basilisk/Chat/Messages/UnifiedMessageRow.xib
+++ b/Basilisk/Chat/Messages/UnifiedMessageRow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21179.7" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21208.1" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21179.7"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21208.1"/>
         <capability name="NSView safe area layout guides" minToolsVersion="12.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,10 +18,10 @@
                     <rect key="frame" x="43" y="0.0" width="426" height="60"/>
                     <subviews>
                         <stackView identifier="HeaderIdentity" distribution="fill" orientation="horizontal" alignment="firstBaseline" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" verticalCompressionResistancePriority="250" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Mw-dN-G5U" userLabel="Header Identity Stack View">
-                            <rect key="frame" x="0.0" y="41" width="426" height="19"/>
+                            <rect key="frame" x="0.0" y="19" width="426" height="41"/>
                             <subviews>
                                 <textField horizontalHuggingPriority="255" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ug7-lf-K9C">
-                                    <rect key="frame" x="-2" y="0.0" width="160" height="19"/>
+                                    <rect key="frame" x="-2" y="22" width="160" height="19"/>
                                     <textFieldCell key="cell" lineBreakMode="clipping" title="Message Author Name" id="4iU-Ay-aaL">
                                         <font key="font" textStyle="title3" name=".SFNS-Regular"/>
                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -29,7 +29,7 @@
                                     </textFieldCell>
                                 </textField>
                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tOi-Zv-130">
-                                    <rect key="frame" x="159" y="1" width="269" height="16"/>
+                                    <rect key="frame" x="159" y="23" width="269" height="16"/>
                                     <textFieldCell key="cell" lineBreakMode="clipping" title="Today at 6:49 PM" id="KiU-t4-Gk9">
                                         <font key="font" metaFont="system"/>
                                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -47,10 +47,10 @@
                             </customSpacing>
                         </stackView>
                         <stackView identifier="ContentStack" distribution="fill" orientation="vertical" alignment="leading" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CYr-nE-9y1">
-                            <rect key="frame" x="0.0" y="0.0" width="426" height="38"/>
+                            <rect key="frame" x="0.0" y="0.0" width="426" height="16"/>
                             <subviews>
-                                <textField horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xl7-w3-Bpq">
-                                    <rect key="frame" x="-2" y="0.0" width="430" height="38"/>
+                                <textField horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xl7-w3-Bpq">
+                                    <rect key="frame" x="-2" y="0.0" width="178" height="16"/>
                                     <textFieldCell key="cell" title="This is the message content." id="OAL-6Y-js7">
                                         <font key="font" metaFont="system"/>
                                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
